# ak-docx

./: README.md  pyproject.toml
ak_docx/: __init__.py  main.py  read.py
