[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ak_docx"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "pytest>=7.2.1",
    "python-docx>=0.8.11",
    "ak_file>=0.0.2",
    "docx2txt>=0.8"
]

[project.urls]
Home = "https://github.com/rpakishore/ak_docx"
